# anki

./: Cargo.toml
addons/: README.md
addons/examples/rust/: .gitignore  Cargo.toml  README.md
addons/examples/rust/src/: lib.rs
addons/interface/: decks.wit  notes.wit  world.wit
proto/anki/: collection.proto
qt/aqt/: main.py
rslib/: Cargo.toml
rslib/src/: addon.rs  lib.rs
rslib/src/backend/: collection.rs  mod.rs
rslib/src/collection/: mod.rs
rslib/src/notes/: mod.rs
rslib/src/search/: parser.rs  writer.rs
